# nyc-shelters

./: .buildinfo  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
myfirstbook/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  notebooks.doctree  nyc_shelters.doctree
myfirstbook/_build/html/: intro.html  nyc_shelters.html
shelterbook/: _config.yml  _toc.yml
shelterbook/_build/.doctrees/: intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
shelterbook/_build/html/: genindex.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
shelterbook/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
